tests/paczka1/small_fuzzy/44419146.err
Error in line 2: coEfh A621 10,4
Error in line 4: btOo S224 29,3
